--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
     <title>Client Testimonials Grid</title>
   </head>
   <body>
+    <div class="container">
+      <div class="box box--1">
+        <div class="client-info">
+          <img
+            class="client-info__image"
+            src="images/image-daniel.jpg"
+            alt="client daniel"
+          />
+          <h3 class="client-info__name">Daniel Clifford</h3>
+          <h4 class="client-info__position">Verified Graduate</h4>
+        </div>
+        <h2 class="title">
+          I received a job offer mid-course, and the subjects I learned were
+          current, if not more so, in the company I joined. I honestly feel I
+          got every penny’s worth.
+        </h2>
+        <p class="details">
+          “ I was an EMT for many years before I joined the bootcamp. I’ve been
+          looking to make a transition and have heard some people who had an
+          amazing experience here. I signed up for the free intro course and
+          found it incredibly fun! I enrolled shortly thereafter. The next 12
+          weeks was the best - and most grueling - time of my life. Since
+          completing the course, I’ve successfully switched careers, working as
+          a Software Engineer at a VR startup. ”
+        </p>
+      </div>
+      <div class="box box--2">gray</div>
+      <div class="box box--side">side</div>
+      <div class="box box--4">white</div>
+      <div class="box box--5">black</div>
+    </div>
     <!-- 
     Daniel Clifford Verified Graduate I received a job offer mid-course, and the
     subjects I learned were current, if not more so, in the company I joined. I
