--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="client-info">
           <img
             class="client-info__image"
-            src="images/image-daniel.jpg"
+            src="images/image-jonathan.jpg"
             alt="client daniel"
           />
           <h3 class="client-info__name">Jonathan Walters</h3>
@@ -71,7 +71,7 @@
         <div class="client-info">
           <img
             class="client-info__image"
-            src="images/image-daniel.jpg"
+            src="images/image-kira.jpg"
             alt="client daniel"
           />
           <h3 class="client-info__name">Kira Whittle</h3>
@@ -98,7 +98,7 @@
         <div class="client-info">
           <img
             class="client-info__image"
-            src="images/image-daniel.jpg"
+            src="images/image-jeanette.jpg"
             alt="client daniel"
           />
           <h3 class="client-info__name">Jeanette Harmon</h3>
@@ -114,7 +114,7 @@
         <div class="client-info">
           <img
             class="client-info__image"
-            src="images/image-daniel.jpg"
+            src="images/image-patrick.jpg"
             alt="client daniel"
           />
           <h3 class="client-info__name">Patrick Abrams</h3>
