last commit with final changes

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             alt="client daniel"
           />
           <h3 class="client-info__name">Daniel Clifford</h3>
-          <h4 class="client-info__position">Verified Graduate</h4>
+          <h4 class="client-info__position trans-white">Verified Graduate</h4>
         </div>
         <h2 class="title">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny’s worth.
         </h2>
-        <p class="details">
+        <p class="details trans-white">
           “ I was an EMT for many years before I joined the bootcamp. I’ve been
           looking to make a transition and have heard some people who had an
           amazing experience here. I signed up for the free intro course and
@@ -56,12 +56,12 @@
             alt="client daniel"
           />
           <h3 class="client-info__name">Jonathan Walters</h3>
-          <h4 class="client-info__position">Verified Graduate</h4>
+          <h4 class="client-info__position trans-white">Verified Graduate</h4>
         </div>
         <h2 class="title">
           The team was very supportive and kept me motivated
         </h2>
-        <p class="details">
+        <p class="details trans-white">
           “ I started as a total newbie with virtually no coding skills. I now
           work as a mobile engineer for a big company. This was one of the best
           investments I’ve made in myself. ”
@@ -75,12 +75,12 @@
             alt="client daniel"
           />
           <h3 class="client-info__name">Kira Whittle</h3>
-          <h4 class="client-info__position">Verified Graduate</h4>
+          <h4 class="client-info__position trans-black">Verified Graduate</h4>
         </div>
         <h2 class="title">
           Such a life-changing experience. Highly recommended!
         </h2>
-        <p class="details">
+        <p class="details trans-black">
           “ Before joining the bootcamp, I’ve never written a line of code. I
           needed some structure from professionals who can help me learn
           programming step by step. I was encouraged to enroll by a former
@@ -102,10 +102,10 @@
             alt="client daniel"
           />
           <h3 class="client-info__name">Jeanette Harmon</h3>
-          <h4 class="client-info__position">Verified Graduate</h4>
+          <h4 class="client-info__position trans-black">Verified Graduate</h4>
         </div>
         <h2 class="title">An overall wonderful and rewarding experience</h2>
-        <p class="details">
+        <p class="details trans-black">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
         </p>
@@ -118,14 +118,14 @@
             alt="client daniel"
           />
           <h3 class="client-info__name">Patrick Abrams</h3>
-          <h4 class="client-info__position">Verified Graduate</h4>
+          <h4 class="client-info__position trans-white">Verified Graduate</h4>
         </div>
         <h2 class="title">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
           easy.
         </h2>
-        <p class="details">
+        <p class="details trans-white">
           “ The staff seem genuinely concerned about my progress which I find
           really refreshing. The program gave me the confidence necessary to be
           able to go out in the world and present myself as a capable junior
